package com.example.guesswhereapp;

import androidx.appcompat.app.AppCompatActivity;

import android.os.Bundle;

public class StatisticsScreen extends AppCompatActivity {

    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
        setContentView(R.layout.activity_statistics_screen);
    }
}